--- a/github.html
+++ b/github.html
@@ -19,5 +19,17 @@
         <li>pull : Depodaki dosyalarımızı çekmemizi sağlar.</li>
         <li>.gitignore : Git in takip etmesini istemediğimiz dosya ve klasörleri belirttiğimiz dosyadır.</li>
     </ol>
+    <p>
+        Vs code da projede bir değişiklik yapıldıktan sonra bunu gitub a göndermek için Source Control tabını açtık. Message alanına yapılan değişiklik ile alakalı bir mesaj yazdık. Son olarak Commit butonuna basıp depoya gönderilmek üzere hazırladık ve Sync butonuna push işlemi yaparak değişikliği github a yolladık.
+    </p>
+    <h2>Temel Git Komutları</h2>
+    <ol>
+        <li>git add veya git add *, git add index.html : Klasöre eklenen dosyaları gönderilmek üzere sahneye alma(Stage)</li>
+        <li>git status : klasördeki tüm değişiklikleri göster</li>
+        <li>git commit -m "ilk commit" : Depoya gönderilmek için commit işlemi yapılır</li>
+        <li>git commit -a -m "Mesajımız" : Staging e ekle ve commitle</li>
+        <li>git push : değişiklikleri depoya gönderme komutu</li>
+        <li>git pull : Uzak depodaki dosyaları lokale indirme</li>
+    </ol>
 </body>
 </html>
